Updated index.html style comment text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Tom Mault">
     <link rel="shortcut icon" href="/favicon.ico">
 
-    <!-- Le styles -->
+    <!-- The styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
